# exo

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.ac~  configure.in.in  exo.spec.in  gtk-doc.make  module.xml
debian/: changelog  control  copyright  rules
doc/: Makefile.am  exo-sections.txt
doc/reference/: Makefile.am
doc/tmpl/: exo-gobject-extensions.sgml  exo-pango-extensions.sgml  exo-toolbars-view.sgml
docs/: Makefile.am  Makefile.in  exo-docs.sgml  exo-sections.txt  exo.types
docs/man/: Makefile.am  exo-open.xml
docs/reference/: Makefile.am  exo-csource.xml  exo-docs.sgml  exo-docs.xml  exo-open.xml  exo-sections.txt  exo.types  visual-index.xml  visual_index.xml
docs/reference/tmpl/: exo-binding.sgml  exo-cell-renderer-ellipsized-text.sgml  exo-cell-renderer-icon.sgml  exo-config.sgml  exo-ellipsized-label.sgml  exo-execute.sgml  exo-gdk-pixbuf-extensions.sgml  exo-gobject-extensions.sgml  exo-gtk-extensions.sgml  exo-hal.sgml  exo-icon-bar.sgml  exo-icon-chooser-dialog.sgml  exo-icon-view.sgml  exo-job.sgml  exo-md5.sgml  exo-mount-point.sgml  exo-pango-extensions.sgml  exo-simple-job.sgml  exo-string.sgml  exo-toolbars-editor-dialog.sgml  exo-toolbars-editor.sgml  exo-toolbars-model.sgml  exo-toolbars-view.sgml  exo-tree-view.sgml  exo-url.sgml  exo-utils.sgml  exo-wrap-table.sgml  exo-xsession-client.sgml
exo/: Makefile.am  Makefile.in  abicheck.sh  exo-0.1.pc.in  exo-0.3.pc.in  exo-1.pc.in  exo-2.pc  exo-2.pc.in  exo-binding.c  exo-binding.h  exo-cell-renderer-ellipsized-text.c  exo-cell-renderer-ellipsized-text.h  exo-cell-renderer-icon.c  exo-cell-renderer-icon.h  exo-common.c  exo-common.h  exo-config.c  exo-config.h.in  exo-dbus.c  exo-dbus.h  exo-ellipsized-label.c  exo-ellipsized-label.h  exo-enum-types.c  exo-enum-types.h  exo-execute.c  exo-execute.h  exo-file-watch.c  exo-file-watch.h  exo-gdk-pixbuf-extensions.c  exo-gdk-pixbuf-extensions.h  exo-gobject-extensions.c  exo-gobject-extensions.h  exo-gtk-extensions.c  exo-gtk-extensions.h  exo-ice.c  exo-ice.h  exo-icon-bar.c  exo-icon-bar.h  exo-icon-chooser-dialog.c  exo-icon-chooser-dialog.h  (+67 more)
exo-csource/: Makefile.am  main.c
exo-desktop-item-edit/: Makefile.am  exo-die-command-entry.c  exo-die-command-entry.h  exo-die-command-model.c  exo-die-command-model.h  exo-die-desktop-model.c  exo-die-desktop-model.h  exo-die-editor.c  exo-die-editor.h  exo-die-enum-types.c  exo-die-enum-types.h  exo-die-icon-button.c  exo-die-icon-button.h  exo-die-utils.c  exo-die-utils.h  main.c
exo-gio-module/: Makefile.am  exo-module.c
exo-hal/: Makefile.am  exo-hal-1.pc.in  exo-hal.c  exo-hal.h
exo-helper/: Makefile.am  exo-helper-chooser-dialog.c  exo-helper-chooser-dialog.h  exo-helper-chooser.c  exo-helper-chooser.h  exo-helper-launcher-dialog.c  exo-helper-launcher-dialog.h  exo-helper-utils.c  exo-helper-utils.h  exo-helper.c  exo-helper.h  exo-preferred-applications-settings.c  exo-preferred-applications.desktop.in  exo-preferred-applications.in  main.c
exo-helper/helpers/: Makefile.am  Terminal.desktop.in  Terminal.desktop.in.in  Thunar.desktop.in.in  aterm.desktop.in.in  balsa.desktop.in  balsa.desktop.in.in  chromium.desktop.in.in  debian-sensible-browser.desktop.in.in  debian-x-terminal-emulator.desktop.in  debian-x-terminal-emulator.desktop.in.in  encompass.desktop.in.in  epiphany.desktop.in.in  eterm.desktop.in  evolution.desktop.in  evolution.desktop.in.in  exo-compose-mail-0.3  exo-compose-mail-1  exo-compose-mail-2  firefox.desktop.in  firefox.desktop.in.in  galeon.desktop.in  geary.desktop.in.in  gnome-terminal.desktop.in  gnome-terminal.desktop.in.in  google-chrome.desktop.in.in  helpers.rc  icecat.desktop.in.in  icedove.desktop.in.in  iceweasel.desktop.in.in  kmail.desktop.in  kmail.desktop.in.in  konqueror.desktop.in  links.desktop.in.in  lynx.desktop.in.in  midori.desktop.in.in  mozilla-browser.desktop.in.in  mozilla-mailer.desktop.in  mozilla-mailer.desktop.in.in  mutt.desktop.in.in  (+19 more)
exo-mount/: Makefile.am  README  exo-mount-fstab.c  exo-mount-fstab.h  exo-mount-hal.c  exo-mount-hal.h  exo-mount-utils.c  exo-mount-utils.h  main.c  mount.rc
exo-mount-notify/: Makefile.am  README  main.c
exo-open/: Makefile.am  exo-file-manager.desktop.in  exo-mail-reader.desktop.in  exo-terminal-emulator.desktop.in  exo-web-browser.desktop.in  main.c
exo-support/: Makefile.am  README  exo-support.h  xfce-heading.c  xfce-heading.h  xfce-titled-dialog.c  xfce-titled-dialog.h
exo-thumbnailers/: Makefile.am  exo-generic-thumbnailer.c  exo-generic-thumbnailer.h  exo-thumbnailer-service-dbus.xml  exo-thumbnailer-service-main.c  exo-thumbnailer-service.c  exo-thumbnailer-service.h  org.xfce.ExoThumbnailer.service.in
exo/xdgmime/: Makefile.am  xdgmime.c
icons/: Makefile.am
icons/48x48/: Makefile.am
java/: Makefile.am  Test.java  org_xfce_exo.c
java/org/xfce/exo/: MimeDatabase.h  MimeDatabase.java  MimeInfo.java
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  az.po  az_AZ.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.gmo  de.po  dz.po  el.po  en_AU.po  en_GB.gmo  en_GB.po  eo.po  es.po  et.po  eu.po  exo-1.pot  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  (+51 more)
po-doc/: ChangeLog  LINGUAS  Makefile.am  am.po  bn.po  ca.po  da.po  es.po  exo-preferred-applications.pot  fr.po  gl.po  id.po  it.po  ja.po  pt.po  pt_BR.po  ru.po  tr.po  ug.po  zh_CN.po
python/: Makefile.am  __init__.py  abicheck.sh  exo.defs  exo.override  exomodule.c  pyexo.h  pyexo.py  pyexobinding.c
python/examples/: Makefile.am  README  binding.py  ellipsizing.py  iconview.py  mime.py  preferred-applications.py  toolbars.py  toolbars.ui
tests/: Makefile.am  test-exo-csource.c  test-exo-icon-chooser-dialog.c  test-exo-mount-point.c  test-exo-noop.c  test-exo-object.c  test-exo-string.c  test-exo-wrap-table.c
tests/data/: Makefile.am
(+76 files in other folders)
