INCLUDES = 								\
	-I$(top_srcdir)							\
	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"				\
	-DEXO_COMPILATION

libexec_PROGRAMS =							\
	exo-thumbnailer-service

exo_thumbnailer_service_built_sources =					\
	exo-generic-thumbnailer-dbus-bindings.h

exo_thumbnailer_service_SOURCES =					\
	exo-generic-thumbnailer.c					\
	exo-generic-thumbnailer.h					\
	exo-thumbnailer-service.c					\
	exo-thumbnailer-service.h					\
	exo-thumbnailer-service-main.c					\
	$(exo_thumbnailer_service_built_sources)

exo_thumbnailer_service_CFLAGS =					\
	-DG_LOG_DOMAIN=\"exo-thumbnailer-service\"			\
	$(DBUS_CFLAGS)							\
	$(DBUS_GLIB_CFLAGS)						\
	$(GLIB_CFLAGS)							\
	$(GTHREAD_CFLAGS)						\
	$(GTK_CFLAGS)							\
	$(LIBXFCE4UTIL_CFLAGS)

exo_thumbnailer_service_LDFLAGS =					\
	-no-undefined

exo_thumbnailer_service_LDADD =						\
	$(DBUS_LIBS)							\
	$(DBUS_GLIB_LIBS)						\
	$(GLIB_LIBS)							\
	$(GTHREAD_LIBS)							\
	$(LIBXFCE4UTIL_LIBS)						\
	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_MAJOR).$(LIBEXO_VERSION_MINOR).la

servicedir = $(datadir)/dbus-1/services
service_in_files = org.xfce.ExoThumbnailer.service.in
service_DATA = $(service_in_files:.service.in=.service)

%.service: %.service.in
	sed -e "s,\@libexecdir\@,$(libexecdir),g" < $< > $@

CLEANFILES =								\
	$(service_DATA)

EXTRA_DIST =								\
	$(service_in_files)

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE

DISTCLEANFILES =							\
	$(exo_thumbnailer_service_built_sources)

BUILT_SOURCES =								\
	$(exo_thumbnailer_service_built_sources)

exo-generic-thumbnailer-dbus-bindings.h: exo-thumbnailer-service-dbus.xml Makefile
	dbus-binding-tool --mode=glib-server --prefix=exo_generic_thumbnailer $< > $@
endif

EXTRADIST =								\
	exo-thumbnailer-service-dbus.xml

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
